--- a/rebar.config
+++ b/rebar.config
@@ -1,14 +1,95 @@
-{minimum_otp_vsn, "18.0"}.
+{minimum_otp_vsn, "25.0"}.
 
-{ct_opts, [{ct_hooks, [cth_readable_failonly, cth_readable_shell]}]}.
-
-{profiles, [
-    {test, [{deps, [
-        {proper, ".*",
-            {git, "git://github.com/manopapad/proper.git", {tag, "v1.2"}}},
-        {cth_readable, ".*",
-            {git, "https://github.com/ferd/cth_readable.git", {ref, "0fc53d1"}}}
-    ]}]}
+{erl_opts, [
+    debug_info,
+    strict_validation,
+    warnings_as_errors,
+    warn_export_all,
+    warn_shadow_vars,
+    warn_unused_import,
+    warn_unused_function,
+    warn_bif_clash,
+    warn_unused_record,
+    warn_deprecated_function,
+    warn_obsolete_guard,
+    warn_unused_vars,
+    warn_export_vars,
+    warn_exported_vars,
+    % warn_missing_spec,
+    % warn_missing_doc,
+    warn_untyped_record
 ]}.
 
-{dialyzer, [{warnings, [unknown]}]}.
+{xref_extra_paths, []}.
+{xref_checks, [
+    undefined_function_calls,
+    undefined_functions,
+    locals_not_used,
+    {deprecated_function_calls, next_major_release},
+    {deprecated_functions, next_major_release}
+]}.
+
+{dialyzer, [
+    {warnings, [no_return, unknown]},
+    {plt_extra_apps, [mnesia]}
+]}.
+
+{profiles, [
+    {test, [
+        {covertool, [{coverdata_files, ["ct.coverdata"]}]},
+        {cover_opts, [verbose, {min_coverage, 80}]},
+        {cover_enabled, true},
+        {cover_export_enabled, true},
+        {deps, [
+            {proper, "~> 1.5"},
+            {cth_readable, "~> 1.6"}
+        ]}
+    ]}
+]}.
+
+{project_plugins, [
+    {rebar3_hex, "~> 7.0"},
+    {rebar3_ex_doc, "~> 0.2"},
+    {rebar3_lint, "~> 4.1"},
+    {erlfmt, "~> 1.7"},
+    {covertool, "~> 2.0"}
+]}.
+
+{hex, [{doc, #{provider => ex_doc}}]}.
+
+{ex_doc, [
+    {source_url, <<"https://github.com/fishcakez/sbroker">>},
+    {main, <<"readme">>},
+    {extras, [<<"README.md">>, <<"LICENSE">>]}
+]}.
+
+{erlfmt, [
+    write,
+    {files, [
+        "src/**/*.{hrl,erl,app.src}",
+        "test/**/*.{hrl,erl,app.src}",
+        "rebar.config"
+    ]}
+]}.
+
+{elvis, [
+    #{
+        dirs => ["src/**"],
+        filter => "*.erl",
+        ruleset => erl_files_strict,
+        rules => [
+            {elvis_style, max_function_length, disable},
+            {elvis_style, no_macros, disable}
+        ]
+    },
+    % #{
+    %     dirs => ["test/"],
+    %     filter => "*.erl",
+    %     ruleset => erl_files_strict
+    % },
+    #{
+        dirs => ["."],
+        filter => "rebar.config",
+        ruleset => rebar_config
+    }
+]}.
