--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,7 @@
     warn_unused_vars,
     warn_export_vars,
     warn_exported_vars,
-    % warn_missing_spec,
+    warn_missing_spec,
     % warn_missing_doc,
     warn_untyped_record
 ]}.
@@ -36,6 +36,7 @@
 
 {profiles, [
     {test, [
+        {erl_opts, [nowarn_missing_spec, nowarn_untyped_record]},
         {covertool, [{coverdata_files, ["ct.coverdata"]}]},
         {cover_opts, [verbose, {min_coverage, 80}]},
         {cover_enabled, true},
