--- a/rebar.config
+++ b/rebar.config
@@ -79,15 +79,18 @@
         filter => "*.erl",
         ruleset => erl_files_strict,
         rules => [
+            {elvis_style, god_modules, #{ignore => [sbroker, sregulator]}},
+            {elvis_style, no_receive_without_timeout, #{ignore => [sbroker, sregulator]}},
+            {elvis_style, invalid_dynamic_call, #{ignore => [sbroker_gen]}},
+            {elvis_style, dont_repeat_yourself, #{min_complexity => 18}},
+            {elvis_style, export_used_types, disable},
+            {elvis_style, state_record_and_type, disable},
+            {elvis_style, max_module_length, disable},
             {elvis_style, max_function_length, disable},
+            {elvis_style, max_function_clause_length, disable},
             {elvis_style, no_macros, disable}
         ]
     },
-    % #{
-    %     dirs => ["test/"],
-    %     filter => "*.erl",
-    %     ruleset => erl_files_strict
-    % },
     #{
         dirs => ["."],
         filter => "rebar.config",
