Add docs to all exported functions and types

--- a/rebar.config
+++ b/rebar.config
@@ -16,7 +16,7 @@
     warn_export_vars,
     warn_exported_vars,
     warn_missing_spec,
-    % warn_missing_doc,
+    warn_missing_doc,
     warn_untyped_record
 ]}.
 
@@ -36,7 +36,7 @@
 
 {profiles, [
     {test, [
-        {erl_opts, [nowarn_missing_spec, nowarn_untyped_record]},
+        {erl_opts, [nowarn_missing_spec, nowarn_missing_doc, nowarn_untyped_record]},
         {covertool, [{coverdata_files, ["ct.coverdata"]}]},
         {cover_opts, [verbose, {min_coverage, 80}]},
         {cover_enabled, true},
